Agrega ruta de actualizacion de cache
